# policyProxy

./: ALL_FIXES_COMPLETED.md  CITATION.cff  CLEANUP_COMPLETED.md  COMPLETE_ANALYSIS_LAUNCH_GUIDE.md  COMPLETE_PERFORMANCE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  DETAILED_PERFORMANCE_PLOTS_SUMMARY.md  FINAL_COMPLETE_ANALYSIS_RESULTS.md  FINAL_SUCCESS_SUMMARY.md  LAUNCH_COMPLETE_ANALYSIS_RESULTS.md  LICENSE-APACHE  LICENSE-CC-BY  PROPER_TASK_FRAMEWORK_IMPLEMENTED.md  README.md  THREE_DISTRIBUTION_SHIFTS_IMPLEMENTATION.md  make_data.py  make_data_v5.py  pyproject.toml
baselines/state_cond/: train_cvae.py  train_cvae_invariant.py  train_cvae_pid.py  train_cvae_reg.py  train_cvae_transformer.py  (+2 more)
configs/: base_v5.yaml
docs/: DATASHEET.md
eval/: changepoints.py  cvae_policy_repr.py  diagnostics.py  policy_changepoint_detection.py  policy_classification.py  policy_divergence.py  rep_similarity.py  report_cvae.py  rollout.py  visualize_episode.py  wasserstein_report.py
generator/: __init__.py  adaptive_opponent.py  arenas.py  dataset_generator.py  gradient_opponent_optimizer.py  lag.py  opponent_policies.py  policies.py  regionizers.py  schedulers.py  utils.py  world.py
lagged_marl.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: create_comprehensive_performance_plots.py  create_detailed_performance_plots.py  create_master_comparison_plot.py  create_three_shifts_performance_analysis.py  create_v5_plots.py  run_v5_pipeline.sh
tools/: cli_all.py  cli_data.py  cli_eval.py  cli_experiments.py  cli_train.py  distribution.py
(+4688 files in other folders)
